<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Informasi_Anjing"
    android:background="@color/red"
    tools:context="com.example.raihanazharrafi.pkl.InformasiAnjingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/slide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <TextView
        android:textColor="@color/White"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="1dp"
        android:textSize="12sp"
        android:text="@string/glosarium_tentang_anjing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/White"
        android:lineSpacingMultiplier="1"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/tentang_anjing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:textColor="@color/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/cara_memelihara_anjing"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/tentang_anjing2"
                android:textColor="@android:color/white"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:textColor="@color/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/masalah"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/tentang_anjing3"
                android:textColor="@android:color/white"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/btn_next"
            android:layout_centerInParent="true"
            android:textColor="@color/dark"
            android:background="@drawable/rec_gradient_btn4"
            android:text="Halaman Selanjutnya"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    </LinearLayout>
</ScrollView>
