<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/anjing_activity"
    android:padding="10dp"
    android:background="@color/red"
    tools:context="com.example.raihanazharrafi.pkl.AnjingActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:background="@drawable/circlebackgroundpurple"
            android:src="@drawable/slide2"
            android:layout_width="150dp"
            android:layout_height="150dp">
        </de.hdodenhof.circleimageview.CircleImageView>
        <TableLayout
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:hint="@string/nama_pemilik"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:hint="@string/nama_anjing">
                </EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:hint="@string/umur_anjing">
                </EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:hint="@string/jenis_anjing">
                </EditText>
            </TableRow>
        </TableLayout>
        <Button
            android:textAllCaps="false"
            android:background="@drawable/rec_gradient_btn3"
            android:id="@+id/btn_monitor"
            android:text="Monitoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>

